# arcgis-farmland-mpc

./: .dockerignore  .gitignore  CITATION.cff  LICENSE  LandUseOptimization_P9.pyt  README.md  environment.yml  pyproject.toml
benchmark/: .gitignore  LICENSE-DATA  README.md  TASK15_OPS.md  build_decision_gate_bundle.py  pyproject.toml  requirements.txt  run_sweep_method.ps1  sweep_manifest.csv  synthetic_env_loader.py
benchmark/baselines/: common.py  run_ga.py  run_greedy.py  run_mpc.py  run_ppo.py  run_random.py  stable_policy.py
benchmark/eval/: metrics.py
benchmark/generator/: adjacency.py  calibration.py  dem.py  features.py  generate.py  io.py  landuse.py  schema.py  tessellation.py
benchmark/presets/: CALIBRATION_LOG.md  bishan_clone.yaml  hilly_small_cons.yaml  mixed_medium_frag.yaml  neijiang_clone.yaml  plain_large_cons.yaml  plain_medium_frag.yaml  plain_small_cons.yaml
benchmark/profile/: README.md  profile_cpu.py  profile_gpu_mpc.py  profile_gpu_ppo.py
benchmark/profiling/: DECISION.md  README.md  cpu_profile.json  decision_gate.ipynb  gpu_mpc_profile.json  gpu_ppo_profile.json  profile_cpu.py  profile_gpu_mpc.py  profile_gpu_ppo.py
benchmark/results/: aggregate_summary_175cell.json
benchmark/results/bishan_clone/GA/: seed0.json  seed1.json  seed2.json  seed3.json  seed4.json
benchmark/results/bishan_clone/Greedy/: seed0.json  seed1.json  seed2.json  seed3.json  seed4.json
benchmark/results/bishan_clone/MPC/: seed0.json  seed1.json  seed2.json  seed3.json  seed4.json
benchmark/results/bishan_clone/PPO/: seed0.json  seed1.json  seed2.json  seed3.json  seed4.json
benchmark/results/bishan_clone/Random/: seed0.json  seed1.json  seed2.json  seed3.json  seed4.json
benchmark/sweep/: colab_runner.ipynb  manifest.py  mpc_sweep_colab.ipynb  ppo_sweep_colab.ipynb  runner.py
benchmark/tests/: conftest.py  test_adjacency.py  test_baselines_run.py  test_calibration.py  test_dem.py  test_env_loader.py  test_features.py  test_generate.py  test_io.py  test_landuse.py  test_metrics.py  test_parcel_subdivision.py  test_presets_load.py  test_schema.py  test_sweep_manifest.py  test_sweep_resume.py  test_tessellation.py
core/: __init__.py  (+10 more)
(+1290 files in other folders)
