[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "farmland-mpc"
version = "0.1.0"
description = "County-scale farmland consolidation via contrastive world-model + MPC. Pure-Python, no proprietary GIS dependencies."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Ning Zhou", email = "zhouning@stu.pku.edu.cn"},
]
keywords = ["land-use", "reinforcement-learning", "mpc", "world-model", "spatial-planning", "contrastive-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "numpy >= 1.24",
    "pandas >= 2.0",
    "geopandas >= 0.14",
    "shapely >= 2.0",
    "rasterio >= 1.3",
    "pyproj >= 3.5",
    "libpysal >= 4.8",
    "scikit-learn >= 1.3",
    "torch >= 2.0",
    "onnx >= 1.14",
    "onnxruntime >= 1.16",
    "gymnasium >= 0.29",
    "PyYAML >= 6.0",
    "typer >= 0.9",
    "tqdm >= 4.65",
]

[project.optional-dependencies]
benchmark = ["opensimplex >= 0.4"]
dev = ["pytest >= 7", "pytest-cov >= 4", "ruff >= 0.1"]

[project.scripts]
farmland-mpc = "farmland_mpc.cli:app"

[project.urls]
Homepage = "https://github.com/zhouning/arcgis-farmland-mpc"
Repository = "https://github.com/zhouning/arcgis-farmland-mpc"

[tool.setuptools.packages.find]
where = ["."]
include = ["farmland_mpc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
